--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -28,6 +28,7 @@
     background-color: white;
     color: #002f34;
     border: 2px solid #002f34;
+    cursor: pointer;
   }
   
   .loginParentDiv a {
